--- a/src/style.css
+++ b/src/style.css
@@ -1,47 +1,35 @@
 body {
   background: gray;
-  box-sizing: border-box;
 }
 .card {
-  text-align: center;
+  display: inline-block;
   background: white;
   margin: auto;
-  height: 200px;
-  font-size: 80px;
+  height: 400px;
   width: 250px;
   padding: 20px;
-  padding-top: 180px;
-  border: 1px solid black;
   border-radius: 5px;
   position: relative;
-  &:before {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 80px;
-  }
-  &:after {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 80px;
-  }
-  &.spades:before,
-  &.spade:after {
-    content: "\2660";
-  }
-  &.club:before,
-  &.club:after {
-    content: "\2663";
-  }
-  &.heart:before,
-  &.heart:after {
-    content: "\2665";
-    color: red;
-  }
-  &.diamond:before,
-  &.diamond:after {
-    content: "\2666";
-    color: red;
-  }
+
+  text-align: center;
+}
+.number {
+  position: absolute;
+  top: 20px;
+  left: 125px;
+  font-size: 80px;
+  line-height: 400px;
+  text-align: center;
+}
+.top-suit {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 80px;
+}
+.bottom-suit {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 80px;
 }
